[package]
name = "junco-launcher-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
dirs = "6.0.0"
futures-util = "0.3.31"
sha1 = "0.11.0-pre.5"
sha2 = "0.11.0-pre.5"
reqwest = { version = "0.12.17", features = ["stream"] }
hex = "0.4.3"
